# pyEclipse

./: main.py  pyproject.toml
app/models/: config.py  development.py  die.py  discovery.py  distortion.py  evolution.py  player.py  reputation.py  sector.py  table.py  technology.py  world.py
app/models/ships/: ancient.py  ship.py  shipPart.py
